<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable name="presenter" type="com.app.roshambo.MainActivityPresenter"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0D6F94"
        android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/please_choose_text"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="18dp"
        android:textStyle="bold"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        android:weightSum="3"
        >

        <Button
            android:id="@+id/btn_rock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="@{ presenter.onClick}"
            android:background="#C8C8C8"
            android:hint="@string/choose_rock_txt"
            />

        <Button
            android:id="@+id/btn_paper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="@{presenter.onClick}"
            android:background="#C8C8C8"
            android:hint="@string/choose_paper_txt"
            />

        <Button
            android:id="@+id/btn_scissors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="@{presenter.onClick}"
            android:background="#C8C8C8"
            android:hint="@string/choose_scissors_txt"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EAEAEA"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="2"
        >

        <ImageView
            android:id="@+id/iv_input"
            android:layout_width="200dp"
            android:layout_height="175dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:tag="input"
            />

        <ImageView
            android:id="@+id/iv_output"
            android:layout_width="200dp"
            android:layout_height="175dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="#ffffff"
            />
        </LinearLayout>
    </LinearLayout>
</layout>